Update C++ to no longer use arma-wrap. Also removed the automatic building of vignettes, and added my file for testing cross-validation with score (in slowtests).

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ r:
  - release 
  - devel
 sudo: required
-r_check_args: "--as-cran"
+r_check_args: "--as-cran --no-build-vignettes --ignore-vignettes"
 cache: packages
 warnings_are_errors: true
 r_github_packages:
