fixed glmnet bug

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,aalen)
 S3method(predictRisk,comprisk)
 S3method(predictRisk,cox.aalen)
+S3method(predictRisk,coxboost)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
 S3method(predictRisk,coxphTD)
@@ -177,6 +178,7 @@ export(coxStrata)
 export(coxStrataLevel)
 export(coxVarCov)
 export(coxVariableName)
+export(coxboost)
 export(discreteRoot)
 export(getSplitMethod)
 export(iidCox)
