fixed bug so now pred risk 0 instead of 1 at baseline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CSCTD)
 S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,Cforest)
+S3method(predictRisk,CoxConfidential)
 S3method(predictRisk,Ctree)
 S3method(predictRisk,FGR)
 S3method(predictRisk,GLMnet)
@@ -204,6 +205,7 @@ export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
 export(sampleDataTD)
+export(saveCoxConfidential)
 export(selectCox)
 export(simActiveSurveillance)
 export(simMelanoma)
