--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,7 +135,6 @@ S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
 S3method(rsquared,default)
 S3method(rsquared,glm)
-S3method(saveSynth,synth)
 S3method(score,wglm)
 S3method(subjectWeights,cox)
 S3method(subjectWeights,forest)
@@ -210,7 +209,7 @@ export(rsquared)
 export(sampleData)
 export(sampleDataTD)
 export(saveCoxConfidential)
-export(saveSynth.synth)
+export(saveSynth)
 export(selectCox)
 export(simActiveSurveillance)
 export(simMelanoma)
