... fix roxygen warning ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ S3method(as.data.table,ate)
 S3method(as.data.table,influenceTest)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
+S3method(as.data.table,transformCIBP)
 S3method(autoplot,Score)
 S3method(autoplot,ate)
 S3method(autoplot,predictCSC)
 S3method(autoplot,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
+S3method(coef,ate)
 S3method(coef,riskRegression)
 S3method(coef,wglm)
 S3method(confint,ate)
@@ -69,11 +71,21 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(is.iidCox,CauseSpecificCox)
+S3method(is.iidCox,coxph)
+S3method(is.iidCox,cph)
+S3method(is.iidCox,default)
+S3method(is.iidCox,phreg)
+S3method(nobs,CauseSpecificCox)
+S3method(nobs,coxph)
+S3method(nobs,multinom)
+S3method(nobs,phreg)
 S3method(nobs,wglm)
 S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
+S3method(predict,survfit)
 S3method(predictRisk,ARR)
 S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CSCTD)
@@ -151,6 +163,7 @@ S3method(summary,riskRegression)
 S3method(summary,wglm)
 S3method(synthesize,formula)
 S3method(synthesize,lvm)
+S3method(vcov,ate)
 export(ARR)
 export(CSC)
 export(Cforest)
