--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,7 +163,6 @@ S3method(summary,riskRegression)
 S3method(summary,wglm)
 S3method(synthesize,formula)
 S3method(synthesize,lvm)
-S3method(vcov,ate)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -235,6 +234,7 @@ export(synthesize)
 export(synthesize.formula)
 export(synthesize.lvm)
 export(transformCIBP)
+export(vcov.ate)
 export(wglm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
@@ -255,6 +255,7 @@ importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,setorder)
+importFrom(data.table,setorderv)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
