--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,6 +163,7 @@ S3method(summary,riskRegression)
 S3method(summary,wglm)
 S3method(synthesize,formula)
 S3method(synthesize,lvm)
+S3method(vcov,ate)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -234,7 +235,6 @@ export(synthesize)
 export(synthesize.formula)
 export(synthesize.lvm)
 export(transformCIBP)
-export(vcov.ate)
 export(wglm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
