(2024.09.10) improve predictCox for categorical cov + KM in wglm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ S3method(as.data.table,ate)
 S3method(as.data.table,influenceTest)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
+S3method(as.data.table,transformCIBP)
 S3method(autoplot,Score)
 S3method(autoplot,ate)
 S3method(autoplot,predictCSC)
 S3method(autoplot,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
+S3method(coef,ate)
 S3method(coef,riskRegression)
 S3method(coef,wglm)
 S3method(confint,ate)
@@ -24,6 +26,7 @@ S3method(confint,predictCSC)
 S3method(confint,predictCox)
 S3method(coxBaseEstimator,coxph)
 S3method(coxBaseEstimator,phreg)
+S3method(coxBaseEstimator,prodlim)
 S3method(coxCenter,coxph)
 S3method(coxCenter,cph)
 S3method(coxCenter,phreg)
@@ -31,35 +34,44 @@ S3method(coxFormula,coxph)
 S3method(coxFormula,cph)
 S3method(coxFormula,glm)
 S3method(coxFormula,phreg)
+S3method(coxFormula,prodlim)
 S3method(coxLP,coxph)
 S3method(coxLP,cph)
 S3method(coxLP,phreg)
+S3method(coxLP,prodlim)
 S3method(coxModelFrame,coxph)
 S3method(coxModelFrame,cph)
 S3method(coxModelFrame,phreg)
+S3method(coxModelFrame,prodlim)
 S3method(coxN,CauseSpecificCox)
 S3method(coxN,coxph)
 S3method(coxN,cph)
 S3method(coxN,glm)
 S3method(coxN,phreg)
+S3method(coxN,prodlim)
 S3method(coxSpecial,coxph)
 S3method(coxSpecial,cph)
 S3method(coxSpecial,phreg)
+S3method(coxSpecial,prodlim)
 S3method(coxStrata,coxph)
 S3method(coxStrata,cph)
 S3method(coxStrata,phreg)
+S3method(coxStrata,prodlim)
 S3method(coxStrataLevel,coxph)
 S3method(coxStrataLevel,cph)
 S3method(coxStrataLevel,phreg)
+S3method(coxStrataLevel,prodlim)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
+S3method(coxVarCov,prodlim)
 S3method(formula,wglm)
 S3method(iid,wglm)
 S3method(iidCox,CauseSpecificCox)
 S3method(iidCox,coxph)
 S3method(iidCox,cph)
 S3method(iidCox,phreg)
+S3method(iidCox,prodlim)
 S3method(influenceTest,default)
 S3method(influenceTest,list)
 S3method(information,wglm)
@@ -69,11 +81,19 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(is.iidCox,CauseSpecificCox)
+S3method(is.iidCox,coxph)
+S3method(is.iidCox,default)
+S3method(nobs,CauseSpecificCox)
+S3method(nobs,coxph)
+S3method(nobs,multinom)
+S3method(nobs,phreg)
 S3method(nobs,wglm)
 S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
+S3method(predict,survfit)
 S3method(predictRisk,ARR)
 S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CSCTD)
@@ -151,6 +171,7 @@ S3method(summary,riskRegression)
 S3method(summary,wglm)
 S3method(synthesize,formula)
 S3method(synthesize,lvm)
+S3method(vcov,ate)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -186,6 +207,7 @@ export(getSplitMethod)
 export(iidCox)
 export(influenceTest)
 export(ipcw)
+export(is.iidCox)
 export(penalizedS3)
 export(plotAUC)
 export(plotBrier)
