... fix for CRAN check ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(coxModelFrame,prodlim)
 S3method(coxN,CauseSpecificCox)
 S3method(coxN,coxph)
 S3method(coxN,cph)
+S3method(coxN,default)
 S3method(coxN,glm)
 S3method(coxN,phreg)
 S3method(coxN,prodlim)
@@ -85,9 +86,7 @@ S3method(is.iidCox,CauseSpecificCox)
 S3method(is.iidCox,coxph)
 S3method(is.iidCox,default)
 S3method(nobs,CauseSpecificCox)
-S3method(nobs,coxph)
 S3method(nobs,multinom)
-S3method(nobs,phreg)
 S3method(nobs,wglm)
 S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
