... finish to merge with master (error in Score example) ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,7 +84,10 @@ S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
 S3method(is.iidCox,CauseSpecificCox)
 S3method(is.iidCox,coxph)
+S3method(is.iidCox,cph)
 S3method(is.iidCox,default)
+S3method(is.iidCox,phreg)
+S3method(is.iidCox,prodlim)
 S3method(nobs,CauseSpecificCox)
 S3method(nobs,multinom)
 S3method(nobs,wglm)
