--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ S3method(is.iidCox,cph)
 S3method(is.iidCox,default)
 S3method(is.iidCox,phreg)
 S3method(is.iidCox,prodlim)
+S3method(model.tables,ate)
 S3method(nobs,CauseSpecificCox)
 S3method(nobs,multinom)
 S3method(nobs,wglm)
@@ -174,6 +175,8 @@ S3method(summary,wglm)
 S3method(synthesize,formula)
 S3method(synthesize,lvm)
 S3method(vcov,ate)
+S3method(vcov,wglm)
+S3method(weights,wglm)
 export(ARR)
 export(CSC)
 export(Cforest)
