--- a/NAMESPACE
+++ b/NAMESPACE
@@ -347,6 +347,7 @@ importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
+importFrom(stats,model.tables)
 importFrom(stats,na.fail)
 importFrom(stats,na.omit)
 importFrom(stats,nobs)
@@ -369,6 +370,7 @@ importFrom(stats,uniroot)
 importFrom(stats,update)
 importFrom(stats,update.formula)
 importFrom(stats,var)
+importFrom(stats,weights)
 importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
