(2024.20.10) better handling duplicated times predictCox with diag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ S3method(confint,ate)
 S3method(confint,influenceTest)
 S3method(confint,predictCSC)
 S3method(confint,predictCox)
+S3method(confint,wglm)
 S3method(coxBaseEstimator,coxph)
 S3method(coxBaseEstimator,phreg)
 S3method(coxBaseEstimator,prodlim)
@@ -89,6 +90,7 @@ S3method(is.iidCox,default)
 S3method(is.iidCox,phreg)
 S3method(is.iidCox,prodlim)
 S3method(model.tables,ate)
+S3method(model.tables,wglm)
 S3method(nobs,CauseSpecificCox)
 S3method(nobs,multinom)
 S3method(nobs,wglm)
@@ -370,6 +372,7 @@ importFrom(stats,uniroot)
 importFrom(stats,update)
 importFrom(stats,update.formula)
 importFrom(stats,var)
+importFrom(stats,vcov)
 importFrom(stats,weights)
 importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
