--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,36 +25,43 @@ S3method(confint,influenceTest)
 S3method(confint,predictCSC)
 S3method(confint,predictCox)
 S3method(confint,wglm)
+S3method(coxBaseEstimator,coxnet)
 S3method(coxBaseEstimator,coxph)
 S3method(coxBaseEstimator,phreg)
 S3method(coxBaseEstimator,prodlim)
 S3method(coxCenter,coxph)
 S3method(coxCenter,cph)
 S3method(coxCenter,phreg)
+S3method(coxFormula,coxnet)
 S3method(coxFormula,coxph)
 S3method(coxFormula,cph)
 S3method(coxFormula,glm)
 S3method(coxFormula,phreg)
 S3method(coxFormula,prodlim)
+S3method(coxLP,coxnet)
 S3method(coxLP,coxph)
 S3method(coxLP,cph)
 S3method(coxLP,phreg)
 S3method(coxLP,prodlim)
+S3method(coxModelFrame,coxnet)
 S3method(coxModelFrame,coxph)
 S3method(coxModelFrame,cph)
 S3method(coxModelFrame,phreg)
 S3method(coxModelFrame,prodlim)
 S3method(coxN,CauseSpecificCox)
+S3method(coxN,coxnet)
 S3method(coxN,coxph)
 S3method(coxN,cph)
 S3method(coxN,default)
 S3method(coxN,glm)
 S3method(coxN,phreg)
 S3method(coxN,prodlim)
+S3method(coxSpecial,coxnet)
 S3method(coxSpecial,coxph)
 S3method(coxSpecial,cph)
 S3method(coxSpecial,phreg)
 S3method(coxSpecial,prodlim)
+S3method(coxStrata,coxnet)
 S3method(coxStrata,coxph)
 S3method(coxStrata,cph)
 S3method(coxStrata,phreg)
@@ -114,6 +121,7 @@ S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,aalen)
 S3method(predictRisk,comprisk)
 S3method(predictRisk,cox.aalen)
+S3method(predictRisk,coxnet)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
 S3method(predictRisk,coxphTD)
