--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,43 +25,43 @@ S3method(confint,influenceTest)
 S3method(confint,predictCSC)
 S3method(confint,predictCox)
 S3method(confint,wglm)
-S3method(coxBaseEstimator,coxnet)
+S3method(coxBaseEstimator,GLMnet)
 S3method(coxBaseEstimator,coxph)
 S3method(coxBaseEstimator,phreg)
 S3method(coxBaseEstimator,prodlim)
 S3method(coxCenter,coxph)
 S3method(coxCenter,cph)
 S3method(coxCenter,phreg)
-S3method(coxFormula,coxnet)
+S3method(coxFormula,GLMnet)
 S3method(coxFormula,coxph)
 S3method(coxFormula,cph)
 S3method(coxFormula,glm)
 S3method(coxFormula,phreg)
 S3method(coxFormula,prodlim)
-S3method(coxLP,coxnet)
+S3method(coxLP,GLMnet)
 S3method(coxLP,coxph)
 S3method(coxLP,cph)
 S3method(coxLP,phreg)
 S3method(coxLP,prodlim)
-S3method(coxModelFrame,coxnet)
+S3method(coxModelFrame,GLMnet)
 S3method(coxModelFrame,coxph)
 S3method(coxModelFrame,cph)
 S3method(coxModelFrame,phreg)
 S3method(coxModelFrame,prodlim)
 S3method(coxN,CauseSpecificCox)
-S3method(coxN,coxnet)
+S3method(coxN,GLMnet)
 S3method(coxN,coxph)
 S3method(coxN,cph)
 S3method(coxN,default)
 S3method(coxN,glm)
 S3method(coxN,phreg)
 S3method(coxN,prodlim)
-S3method(coxSpecial,coxnet)
+S3method(coxSpecial,GLMnet)
 S3method(coxSpecial,coxph)
 S3method(coxSpecial,cph)
 S3method(coxSpecial,phreg)
 S3method(coxSpecial,prodlim)
-S3method(coxStrata,coxnet)
+S3method(coxStrata,GLMnet)
 S3method(coxStrata,coxph)
 S3method(coxStrata,cph)
 S3method(coxStrata,phreg)
@@ -115,13 +115,13 @@ S3method(predictRisk,CoxConfidential)
 S3method(predictRisk,Ctree)
 S3method(predictRisk,FGR)
 S3method(predictRisk,GLMnet)
+S3method(predictRisk,GLMnet2)
 S3method(predictRisk,Hal9001)
 S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,aalen)
 S3method(predictRisk,comprisk)
 S3method(predictRisk,cox.aalen)
-S3method(predictRisk,coxnet)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
 S3method(predictRisk,coxphTD)
@@ -152,6 +152,7 @@ S3method(predictRisk,survfit)
 S3method(predictRisk,wglm)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
+S3method(print,GLMnet)
 S3method(print,IPA)
 S3method(print,Score)
 S3method(print,ate)
@@ -307,6 +308,8 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(glmnet,cv.glmnet)
+importFrom(glmnet,glmnet)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,gray)
 importFrom(grDevices,rainbow)
