--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,7 +108,6 @@ S3method(predict,riskRegression)
 S3method(predict,survfit)
 S3method(predictRisk,ARR)
 S3method(predictRisk,BinaryTree)
-S3method(predictRisk,CSCTD)
 S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,Cforest)
 S3method(predictRisk,CoxConfidential)
@@ -124,7 +123,6 @@ S3method(predictRisk,comprisk)
 S3method(predictRisk,cox.aalen)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
-S3method(predictRisk,coxphTD)
 S3method(predictRisk,cph)
 S3method(predictRisk,default)
 S3method(predictRisk,double)
@@ -163,6 +161,7 @@ S3method(print,riskRegression)
 S3method(print,scoreAUC)
 S3method(print,scoreBrier)
 S3method(print,subjectWeights)
+S3method(print,synth_code)
 S3method(print,wglm)
 S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
@@ -244,7 +243,6 @@ export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
-export(sampleDataTD)
 export(saveCoxConfidential)
 export(saveSynth)
 export(selectCox)
