--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
 S3method(predictRisk,singleEventCB)
 S3method(predictRisk,survfit)
+S3method(predictRisk,survreg)
 S3method(predictRisk,wglm)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
