--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with
     Competing Risks
-Version: 2026.02.19
+Version: 2026.02.25
 Authors@R: c(person("Thomas Alexander", "Gerds", role = c("aut", "cre"), email = "tag@biostat.ku.dk"),
              person("Johan Sebastian", "Ohlendorff", role = "aut"),
              person("Paul", "Blanche", role = "ctb"),
@@ -33,6 +33,7 @@ Imports:
     ranger,
     Rcpp,
     rms (>= 5.1.3),
+    Hmisc,
     stats,
     glmnet,
     survival (>= 2.44.1),
